--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <center>
       此生无悔入华夏,来世还在种花家!<br>
       使用本服务需遵守<a rel="nofollow" href="http://www.chinaflag.org.cn/GuoQiFaGui/201474141857955.html" target="_blank" rel="noopener noreferrer" class="nya-btn">《中华人民共和国国旗法》</a>
-      <p>微信公众号</p><br><p><img alt="感谢支持！" src="https://i.loli.net/2020/08/04/xWUIuqLckrYeavm.jpg" width="100" height="100" /></p>
+      <p>微信公众号</p><br><p><img alt="感谢支持！" src="https://gcore.jsdelivr.net/gh/muzihuaner/huancdn/img/20210520145355.webp" width="100" height="100" /></p>
     <script type="text/javascript" src="https://js.users.51.la/20375507.js"></script>
     </center>
     <audio autoplay="true" loop="true"> <source src="whwdzg.mp3"></audio>
