--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       }
     </style>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"JaboiiJM5nb5a5Z5",ck:"JaboiiJM5nb5a5Z5"})</script>
   </head>
 
 <body>
@@ -103,158 +104,7 @@
     <audio autoplay="true" loop="true">
       <source src="whwdzg.mp3">
     </audio>
-    <script type='text/javascript'>
-      const handler = setInterval(function () { console.clear(); const before = new Date(); debugger; const after = new Date(); const cost = after.getTime() - before.getTime(); if (cost > 100) { } }, 1);
-      //屏蔽右键菜单
-      document.oncontextmenu = function (event) {
-        if (window.event) {
-          event = window.event;
-        }
-        try {
-          var the = event.srcElement;
-          if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
-            return false;
-          }
-          return true;
-        } catch (e) {
-          return false;
-        }
-      }
-      //屏蔽粘贴
-      document.onpaste = function (event) {
-        if (window.event) {
-          event = window.event;
-        }
-        try {
-          var the = event.srcElement;
-          if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
-            return false;
-          }
-          return true;
-        } catch (e) {
-          return false;
-        }
-      }
-      //屏蔽复制
 
-      //屏蔽剪切
-      document.oncut = function (event) {
-        if (window.event) {
-          event = window.event;
-        }
-        try {
-          var the = event.srcElement;
-          if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
-            return false;
-          }
-          return true;
-        } catch (e) {
-          return false;
-        }
-      }
-      //禁止f12
-
-      function fuckyou() {
-        window.open("https://huangetech.gitee.io/lovechina", "_blank"); //新窗口打开页面
-        window.close(); //关闭当前窗口(防抽)
-        window.location = "about:blank"; //将当前窗口跳转置空白页
-      }
-      //禁止Ctrl+U
-      var arr = [123, 17, 18];
-      document.oncontextmenu = new Function("event.returnValue=false;"), //禁用右键
-
-        window.onkeydown = function (e) {
-          var keyCode = e.keyCode || e.which || e.charCode;
-          var ctrlKey = e.ctrlKey || e.metaKey;
-          console.log(keyCode + "--" + keyCode);
-          if (ctrlKey && keyCode == 85) {
-            e.preventDefault();
-          }
-          if (arr.indexOf(keyCode) > -1) {
-            e.preventDefault();
-          }
-        }
-
-      function ck() {
-        console.profile();
-        console.profileEnd();
-        //我们判断一下profiles里面有没有东西，如果有，肯定有人按F12了，没错！！
-        if (console.clear) {
-          console.clear()
-        };
-        if (typeof console.profiles == "object") {
-          return console.profiles.length > 0;
-        }
-      }
-
-      function hehe() {
-        if ((window.console && (console.firebug || console.table && /firebug/i.test(console.table()))) || (
-          typeof opera ==
-          'object' && typeof opera.postError == 'function' && console.profile.length > 0)) {
-          fuckyou();
-        }
-        if (typeof console.profiles == "object" && console.profiles.length > 0) {
-          fuckyou();
-        }
-      }
-      hehe();
-      window.onresize = function () {
-        if ((window.outerHeight - window.innerHeight) > 100)
-          //判断当前窗口内页高度和窗口高度，如果差值大于100，那么呵呵
-          fuckyou();
-      }
-
-      document.onkeydown = function (event) {
-        if ((event.keyCode == 112) || //屏蔽 F1
-          (event.keyCode == 113) || //屏蔽 F2
-          (event.keyCode == 114) || //屏蔽 F3
-          (event.keyCode == 115) || //屏蔽 F4
-          // (event.keyCode == 116) || //屏蔽 F5
-          (event.keyCode == 117) || //屏蔽 F6
-          (event.keyCode == 118) || //屏蔽 F7
-          (event.keyCode == 119) || //屏蔽 F8
-          (event.keyCode == 120) || //屏蔽 F9
-          (event.keyCode == 121) || //屏蔽 F10
-          (event.keyCode == 122) || //屏蔽 F11
-          (event.keyCode == 123)) //屏蔽 F12
-        {
-          return false;
-        }
-      }
-      window.onhelp = function () {
-        return false;
-      }
-    </script>
-    <script>
-      var a = 'retrtrfdcfvvvv';
-      var ym = window.location;
-      var ym2 = 'huangetech.gitee.io/lovechina';
-      var ym3 = String(ym);
-      function suan(a) {
-        var re = a.substring(0, 2);
-        var tr = a.substring(2, 4);
-        var tr2 = a.substring(4, 6);
-        var fd = a.substring(6, 8);
-        var cf = a.substring(8, 10);
-        var vv = a.substring(10, 12);
-        var vv2 = a.substring(12, 14);
-        re = 'h';
-        tr = 't';
-        tr2 = 't';
-        fd = 'p';
-        cf = ':';
-        vv = '/';
-        vv2 = '/';
-        var p = re + tr + tr2 + fd + cf + vv + vv2;
-        return p;
-      }
-      if (ym3.indexOf(ym2) == -1) {
-        alert(ym2);
-        // var av = ym3;
-        var b = suan(a) + 'huangetech.gitee.io/lovechina' + '/';
-        window.location = b;
-      }
-    </script>
   </div>
   <div style='display: none'>
     <img id='img' src='' alt='' />
@@ -379,5 +229,15 @@
       alert('长按图片保存或分享');
     }
   </script>
-
+  <script src="//jsd.onmicrosoft.cn/npm/sweetalert2@11"></script>
+  <script>
+          Swal.fire({
+              title: '支持本站！',
+              text: '支付宝红包，扫码领取！',
+              imageUrl: 'https://tu.quickso.cn/file/4e16f92316ed95275f3de.jpg',
+              imageAlt: '支付宝卡片',
+              animation: false,
+              footer: '祝您节日愉快！'
+          })
+      </script>
 </html>
